--- a/index.html
+++ b/index.html
@@ -5,14 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daftar Harga Accel UserBot</title>
     <style>
-        /* Gaya Dasar */
+        /* RESET */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
         body {
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
             text-align: center;
             padding: 50px;
             margin: 0;
-            position: relative;
         }
 
         /* Animasi Loading */
@@ -60,102 +65,102 @@
             margin-bottom: 10px;
         }
 
-        .price-list {
-            text-align: left;
-            margin-top: 20px;
+        /* Logo Instagram & Telegram */
+        .social-icons {
+            position: absolute;
+            top: 50%;
+            left: 20px;
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+            transform: translateY(-50%);
         }
 
-        .price-item {
-            background: #f9f9f9;
-            padding: 15px;
-            margin: 10px 0;
-            border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        .social-icons a {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            background: white;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+            animation: spin 2s infinite linear;
         }
 
-        .button {
+        .social-icons img {
+            width: 30px;
+            height: 30px;
+        }
+
+        /* Hamburger Menu */
+        .hamburger {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            cursor: pointer;
+        }
+
+        .bar {
+            width: 30px;
+            height: 5px;
+            background-color: #333;
+            margin: 6px 0;
+        }
+
+        /* Sidebar */
+        .sidebar {
+            position: fixed;
+            top: 0;
+            right: -250px;
+            width: 250px;
+            height: 100%;
+            background: white;
+            box-shadow: -2px 0 5px rgba(0, 0, 0, 0.2);
+            transition: 0.5s;
+            padding: 20px;
+        }
+
+        .sidebar a {
             display: block;
             padding: 10px;
             background: #007bff;
             color: white;
             text-decoration: none;
-            border-radius: 5px;
+            margin: 10px 0;
             text-align: center;
-            margin-top: 10px;
-            transition: 0.3s;
+            border-radius: 5px;
         }
 
-        .button:hover {
-            background: #0056b3;
-        }
-
-        /* Logo Instagram & Telegram */
-        .social-icons {
-            position: absolute;
-            left: 20px;
-            top: 50%;
-            transform: translateY(-50%);
-        }
-
-        .social-icons a {
-            display: block;
-            margin-bottom: 10px;
-        }
-
-        .social-icons img {
-            width: 40px;
-            height: 40px;
-            animation: spin 3s linear infinite;
-        }
-
-        /* Menu Navigasi */
-        .menu-icon {
-            position: absolute;
-            right: 20px;
-            top: 20px;
-            font-size: 30px;
-            cursor: pointer;
-        }
-
-        .menu {
-            display: none;
+        /* Notifikasi */
+        .modal {
             position: fixed;
-            top: 50px;
-            right: 20px;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 80%;
+            max-width: 400px;
             background: white;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            border-radius: 5px;
-            width: 200px;
-        }
-
-        .menu div {
-            padding: 10px;
-            border-bottom: 1px solid #ddd;
-            cursor: pointer;
-            text-align: left;
-        }
-
-        .menu div:hover {
-            background: #f1f1f1;
-        }
-
-        /* Tampilan Menu yang Muncul */
-        .submenu {
-            display: none;
             padding: 20px;
-            background: white;
-            text-align: center;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
             border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            max-width: 500px;
-            margin: 20px auto;
+            display: none;
+            text-align: center;
         }
 
-        .payment-icons img {
+        .modal img {
             width: 60px;
-            height: 30px;
-            margin: 10px;
-            animation: spin 2s linear infinite;
+            animation: spin 3s infinite linear;
+        }
+
+        .close-btn {
+            margin-top: 20px;
+            padding: 10px 20px;
+            background: red;
+            color: white;
+            border: none;
+            cursor: pointer;
+            border-radius: 5px;
         }
     </style>
 </head>
@@ -166,63 +171,56 @@
         <div class="loading-spinner"></div>
     </div>
 
-    <!-- Logo Instagram & Telegram -->
-    <div class="social-icons">
-        <a href="https://instagram.com/accelgyz"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram"></a>
-        <a href="https://t.me/OwnTelegramX"><img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram"></a>
-    </div>
-
-    <!-- Menu Navigasi -->
-    <div class="menu-icon" onclick="toggleMenu()">☰</div>
-    <div class="menu" id="menu">
-        <div onclick="showSubmenu('payment')">Payment</div>
-        <div onclick="showSubmenu('dataDiri')">Data Diri</div>
-        <div onclick="location.reload()">Dashboard</div>
-    </div>
-
     <!-- Konten Website -->
     <div class="container" id="content">
         <h1>Daftar Harga Accel UserBot</h1>
-        <div class="price-list">
-            <!-- 10 Harga -->
-            <div class="price-item"><p><strong>Harga 1 Bulan</strong></p><p>IDR 10.000</p></div>
-            <div class="price-item"><p><strong>Harga 2 Bulan</strong></p><p>IDR 20.000</p></div>
-            <div class="price-item"><p><strong>Harga 3 Bulan</strong></p><p>IDR 30.000</p></div>
-            <div class="price-item"><p><strong>Harga 4 Bulan</strong></p><p>IDR 40.000</p></div>
-            <div class="price-item"><p><strong>Harga 5 Bulan</strong></p><p>IDR 50.000</p></div>
-        </div>
     </div>
 
-    <!-- Submenu -->
-    <div class="submenu" id="payment">
-        <h2>BERIKUT DAFTAR PAYMENT PEMBELIAN</h2>
-        <div class="payment-icons">
-            <img src="qris.png" alt="QRIS">
-            <img src="dana.png" alt="DANA">
-            <img src="ovo.png" alt="OVO">
-            <img src="gopay.png" alt="GOPAY">
-        </div>
+    <!-- Logo Instagram & Telegram -->
+    <div class="social-icons">
+        <a href="https://instagram.com/accelgyz"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png"></a>
+        <a href="https://t.me/OwnTelegramX"><img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg"></a>
     </div>
 
-    <div class="submenu" id="dataDiri">
-        <p>Halo, saya Ovan Sev Farel Sirait...</p>
+    <!-- Hamburger Menu -->
+    <div class="hamburger" onclick="toggleSidebar()">
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+    </div>
+
+    <!-- Sidebar -->
+    <div class="sidebar" id="sidebar">
+        <a href="#" onclick="showPayment()">Payment</a>
+        <a href="#" onclick="showProfile()">Data Diri</a>
+        <a href="#" onclick="hideSidebar()">Dashboard</a>
+    </div>
+
+    <!-- Modal Payment -->
+    <div class="modal" id="paymentModal">
+        <h3>DAFTAR HARGA PAYMENT PEMBELIAN</h3>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/8/89/QRIS_logo.svg">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/DANA_Logo.png">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/7/72/Logo_ovo_purple.svg">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/GoPay_Logo.png">
+        <button class="close-btn" onclick="closeModal('paymentModal')">CLOSE</button>
+    </div>
+
+    <!-- Modal Data Diri -->
+    <div class="modal" id="profileModal">
+        <p>Halo, saya Ovan Sev Farel Sirait, atau Ovan untuk singkatnya.</p>
+        <p>Di media sosial, saya sering dipanggil Accel.</p>
+        <p>Saya pemula di dunia pemrograman dan saat ini belajar JavaScript, Python, HTML, dan CSS.</p>
+        <button class="close-btn" onclick="closeModal('profileModal')">CLOSE</button>
     </div>
 
     <script>
-        setTimeout(() => {
-            document.getElementById("loading").style.display = "none";
-            document.getElementById("content").style.display = "block";
-        }, 4000);
-
-        function toggleMenu() {
-            document.getElementById("menu").classList.toggle("show");
-        }
-
-        function showSubmenu(id) {
-            document.querySelectorAll('.submenu').forEach(el => el.style.display = 'none');
-            document.getElementById(id).style.display = 'block';
-        }
+        function toggleSidebar() { document.getElementById("sidebar").style.right = "0"; }
+        function hideSidebar() { document.getElementById("sidebar").style.right = "-250px"; }
+        function showPayment() { document.getElementById("paymentModal").style.display = "block"; }
+        function showProfile() { document.getElementById("profileModal").style.display = "block"; }
+        function closeModal(id) { document.getElementById(id).style.display = "none"; }
     </script>
 
 </body>
-<
+</html>
