--- a/index.html
+++ b/index.html
@@ -81,70 +81,45 @@
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
 
-        .order-btn {
-            display: block;
-            width: 100%;
-            padding: 10px;
-            background: #007bff;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
+        .button-container {
+            display: flex;
+            justify-content: space-between;
             margin-top: 10px;
         }
 
-        /* Logo Instagram & Telegram */
-        .social-icons {
-            position: fixed;
-            top: 50%;
-            left: 20px;
-            display: flex;
-            flex-direction: column;
-            gap: 15px;
-            transform: translateY(-50%);
-        }
-
-        .social-icons a {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 50px;
-            height: 50px;
-            border-radius: 50%;
-            background: white;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-            animation: spin 2s infinite linear;
-        }
-
-        .social-icons img {
-            width: 30px;
-            height: 30px;
-        }
-
-        /* Sidebar */
-        .sidebar {
-            position: fixed;
-            top: 0;
-            right: -250px;
-            width: 250px;
-            height: 100%;
-            background: white;
-            box-shadow: -2px 0 5px rgba(0, 0, 0, 0.2);
-            transition: 0.5s;
-            padding: 20px;
-        }
-
-        .sidebar a {
-            display: block;
+        .order-btn, .data-btn, .close-btn {
+            flex: 1;
             padding: 10px;
-            background: #007bff;
-            color: white;
-            text-decoration: none;
-            margin: 10px 0;
             text-align: center;
             border-radius: 5px;
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
+            cursor: pointer;
+            transition: transform 0.2s;
         }
 
-        /* Notifikasi */
+        .order-btn {
+            background: #007bff;
+            margin-right: 5px;
+        }
+
+        .data-btn {
+            background: #28a745;
+            margin-left: 5px;
+        }
+
+        .close-btn {
+            background: red;
+            margin-top: 20px;
+            border: none;
+        }
+
+        .order-btn:hover, .data-btn:hover, .close-btn:hover {
+            transform: scale(1.1);
+        }
+
+        /* Notifikasi (Pop-up) */
         .modal {
             position: fixed;
             top: 50%;
@@ -159,16 +134,6 @@
             display: none;
             text-align: center;
         }
-
-        .close-btn {
-            margin-top: 20px;
-            padding: 10px;
-            background: red;
-            color: white;
-            border: none;
-            cursor: pointer;
-            border-radius: 5px;
-        }
     </style>
 </head>
 <body>
@@ -182,60 +147,31 @@
     <!-- Konten Website -->
     <div class="container" id="content">
         <h1>Daftar Harga Accel UserBot</h1>
-        <div class="price-item">
-            <p><strong>Harga 1 Bulan</strong></p>
-            <p>IDR 10.000</p>
-            <a href="https://t.me/OwnTelegramX" class="order-btn">Order Disini</a>
-        </div>
-        <div class="price-item">
-            <p><strong>Harga 2 Bulan</strong></p>
-            <p>IDR 20.000</p>
-            <a href="https://t.me/OwnTelegramX" class="order-btn">Order Disini</a>
-        </div>
+
+        <!-- Daftar Harga -->
+        <div class="price-item"><p><strong>Harga 1 Bulan</strong></p><p>IDR 10.000</p><div class="button-container"><a href="https://t.me/OwnTelegramX" class="order-btn">Order Disini</a><button class="data-btn" onclick="showProfile()">Data Diri</button></div></div>
+        <div class="price-item"><p><strong>Harga 2 Bulan</strong></p><p>IDR 20.000</p><div class="button-container"><a href="https://t.me/OwnTelegramX" class="order-btn">Order Disini</a><button class="data-btn" onclick="showProfile()">Data Diri</button></div></div>
+        <div class="price-item"><p><strong>Harga 3 Bulan</strong></p><p>IDR 30.000</p><div class="button-container"><a href="https://t.me/OwnTelegramX" class="order-btn">Order Disini</a><button class="data-btn" onclick="showProfile()">Data Diri</button></div></div>
+        <div class="price-item"><p><strong>Harga 4 Bulan</strong></p><p>IDR 40.000</p><div class="button-container"><a href="https://t.me/OwnTelegramX" class="order-btn">Order Disini</a><button class="data-btn" onclick="showProfile()">Data Diri</button></div></div>
+        <div class="price-item"><p><strong>Harga 5 Bulan</strong></p><p>IDR 50.000</p><div class="button-container"><a href="https://t.me/OwnTelegramX" class="order-btn">Order Disini</a><button class="data-btn" onclick="showProfile()">Data Diri</button></div></div>
+        <div class="price-item"><p><strong>Harga 6 Bulan</strong></p><p>IDR 60.000</p><div class="button-container"><a href="https://t.me/OwnTelegramX" class="order-btn">Order Disini</a><button class="data-btn" onclick="showProfile()">Data Diri</button></div></div>
+        <div class="price-item"><p><strong>Harga 7 Bulan</strong></p><p>IDR 70.000</p><div class="button-container"><a href="https://t.me/OwnTelegramX" class="order-btn">Order Disini</a><button class="data-btn" onclick="showProfile()">Data Diri</button></div></div>
+        <div class="price-item"><p><strong>Harga 8 Bulan</strong></p><p>IDR 80.000</p><div class="button-container"><a href="https://t.me/OwnTelegramX" class="order-btn">Order Disini</a><button class="data-btn" onclick="showProfile()">Data Diri</button></div></div>
+        <div class="price-item"><p><strong>Harga 9 Bulan</strong></p><p>IDR 90.000</p><div class="button-container"><a href="https://t.me/OwnTelegramX" class="order-btn">Order Disini</a><button class="data-btn" onclick="showProfile()">Data Diri</button></div></div>
+        <div class="price-item"><p><strong>Harga 10 Bulan</strong></p><p>IDR 100.000</p><div class="button-container"><a href="https://t.me/OwnTelegramX" class="order-btn">Order Disini</a><button class="data-btn" onclick="showProfile()">Data Diri</button></div></div>
     </div>
 
-    <!-- Logo Instagram & Telegram -->
-    <div class="social-icons">
-        <a href="https://instagram.com/accelgyz">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png">
-        </a>
-        <a href="https://t.me/OwnTelegramX">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg">
-        </a>
-    </div>
-
-    <!-- Sidebar -->
-    <div class="sidebar" id="sidebar">
-        <a href="#" onclick="showProfile()">Data Diri</a>
-    </div>
-
-    <!-- Modal Data Diri -->
+    <!-- Pop-up Data Diri -->
     <div class="modal" id="profileModal">
         <p>Halo, saya Ovan Sev Farel Sirait, atau Ovan untuk singkatnya.</p>
-        <p>Di media sosial, saya sering dipanggil Accel.</p>
         <p>Saya pemula di dunia pemrograman dan saat ini belajar JavaScript, Python, HTML, dan CSS.</p>
-        <button class="close-btn" onclick="closeModal('profileModal')">CLOSE</button>
+        <button class="close-btn" onclick="closeModal()">CLOSE</button>
     </div>
 
     <script>
-        function toggleSidebar() { 
-            document.getElementById("sidebar").style.right = "0"; 
-        }
-
-        function showProfile() { 
-            document.getElementById("profileModal").style.display = "block"; 
-        }
-
-        function closeModal(id) { 
-            document.getElementById(id).style.display = "none"; 
-        }
-
-        window.onload = function() {
-            setTimeout(function() {
-                document.getElementById("loading").style.display = "none";
-                document.getElementById("content").style.display = "block";
-            }, 5000);
-        };
+        function showProfile() { document.getElementById("profileModal").style.display = "block"; }
+        function closeModal() { document.getElementById("profileModal").style.display = "none"; }
+        window.onload = function() { setTimeout(() => { document.getElementById("loading").style.display = "none"; document.getElementById("content").style.display = "block"; }, 5000); };
     </script>
 
 </body>
